syntax = "proto2";

package NYT.NScheduler.NProto;

import "yt_proto/yt/core/misc/proto/guid.proto";
import "yt_proto/yt/client/node_tracker_client/proto/node.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqDumpInputContext
{
    required NYT.NProto.TGuid job_id = 1;
    required string path = 2;
}

message TRspDumpInputContext
{ }

message TReqGetJobNode
{
    required NYT.NProto.TGuid job_id = 1;
    optional uint32 required_permissions = 2 [default = 0];
}

message TRspGetJobNode
{
    required NYT.NNodeTrackerClient.NProto.TNodeDescriptor node_descriptor = 1;
}

message TReqAbandonJob
{
    required NYT.NProto.TGuid job_id = 1;
}

message TRspAbandonJob
{ }

message TReqAbortJob
{
    required NYT.NProto.TGuid job_id = 1;
    optional int64 interrupt_timeout = 2;
}

message TRspAbortJob
{ }

message TReqGetJobShellDescriptor
{
    required NYT.NProto.TGuid job_id = 1;
    optional string shell_name = 2;
}

message TRspGetJobShellDescriptor
{
    required NYT.NNodeTrackerClient.NProto.TNodeDescriptor node_descriptor = 1;
    optional string subcontainer = 2;
}

////////////////////////////////////////////////////////////////////////////////
